plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
}

allprojects {
    group = 'com.loanmanagement'
    version = '1.0.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        // Spring Boot starters - complete set
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        implementation 'org.springframework.boot:spring-boot-starter-validation'

        // Jakarta EE APIs (critical for fixing compilation errors)
        implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
        implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
        implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

        // Spring framework core
        implementation 'org.springframework:spring-context'
        implementation 'org.springframework:spring-tx'
        implementation 'org.springframework:spring-core'
        implementation 'org.springframework:spring-beans'

        // SLF4J logging (fixes Logger resolution)
        implementation 'org.slf4j:slf4j-api'

        // Metrics and monitoring
        implementation 'io.micrometer:micrometer-core'
        implementation 'io.micrometer:micrometer-registry-prometheus'

        // JSON processing
        implementation 'com.fasterxml.jackson.core:jackson-databind'

        // Documentation
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

        // Database
        runtimeOnly 'com.h2database:h2'
        runtimeOnly 'org.postgresql:postgresql'

        // Lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        // Testing
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.junit.jupiter:junit-jupiter'
        testImplementation 'org.assertj:assertj-core'
        testImplementation 'org.mockito:mockito-junit-jupiter'
    }

    test {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs = [
                '-parameters',
                '-Xlint:unchecked',
                '-Xlint:deprecation'
        ]
    }
}

// Shared kernel is a library, not a Spring Boot application
project(':shared-kernel') {
    bootJar {
        enabled = false
    }
    jar {
        enabled = true
    }
}